# Playground

./: .gitmodules  CMakeLists.txt
WebGPUExamples/: CMakeLists.txt  HelloTriangleSimple.cpp
WebGPUExamples/Examples/: HelloTriangleAdvanced.cpp  HelloTriangleSimple.cpp
WebGPUExamples/resources/: HelloTriangleAdvanced.wgsl  HelloTriangleSimple.wgsl
